# Lucid

./: CMakeLists.txt  LICENSE  README.md  articalTemplateHtml  main.cpp
ArticalProcessing/: Artical.cpp  Artical.h  ArticalHtmlDesigner.cpp  ArticalHtmlDesigner.h  Article.cpp  Article.h  ArticleHtmlDesigner.cpp  ArticleHtmlDesigner.h
ArticleScraper/: HtmlExtractor.cpp  HtmlExtractor.h
LLM/: Request.cpp  Request.h  client.cpp  client.h
Tests/: tests.cpp
UserInterface/: AnalysisCommand.cpp  AnalysisCommand.h  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  ExitCommand.cpp  ExitCommand.h  ExportCommand.cpp  ExportCommand.h  LoadCommand.cpp  LoadCommand.h  OpenCommand.cpp  OpenCommand.h  Shell.cpp  Shell.h
Util/: FileUtil.cpp  FileUtil.h  StringUtil.cpp  StringUtil.h
